force-app/main/default/objects/Medication__c/fields/Important_Information__c.field-meta.xml
<CustomField>
    <fullName>Important_Information__c</fullName>
    <label>Important Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>