force-app/main/default/objects/Medication__c/fields/Instructions_for_Use__c.field-meta.xml
<CustomField>
    <fullName>Instructions_for_Use__c</fullName>
    <label>Instructions for Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>