force-app/main/default/objects/Medication__c/fields/Medication_Position__c.field-meta.xml
<CustomField>
    <fullName>Medication_Position__c</fullName>
    <description>Allocation field that is used to edit record collections when creating cycle medications from the template.</description>
    <label>Medication Position</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>