force-app/main/default/objects/Medication__c/fields/Medication_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Medication_System_ID__c</fullName>
    <label>Medication System ID</label>
    <type>AutoNumber</type>
</CustomField>