force-app/main/default/objects/Medication__c/fields/Patient_Medication__c.field-meta.xml
<CustomField>
    <fullName>Patient_Medication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Medication</label>
    <referenceTo>Cycle_Medication__c</referenceTo>
    <relationshipLabel>Medications</relationshipLabel>
    <relationshipName>Medications</relationshipName>
    <type>Lookup</type>
</CustomField>