force-app/main/default/objects/Medication__c/fields/PBS_Eligible__c.field-meta.xml
<CustomField>
    <fullName>PBS_Eligible__c</fullName>
    <label>PBS Eligible?</label>
    <length>150</length>
    <type>Text</type>
</CustomField>