force-app/main/default/objects/Medication__c/fields/Sc__c.field-meta.xml
<CustomField>
    <fullName>Sc__c</fullName>
    <label>Sc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>AS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>