force-app/main/default/objects/Medication__c/fields/Side_Effects__c.field-meta.xml
<CustomField>
    <fullName>Side_Effects__c</fullName>
    <label>Side Effects</label>
    <length>255</length>
    <type>Text</type>
</CustomField>