force-app/main/default/objects/Medication__c/fields/Storage_Information__c.field-meta.xml
<CustomField>
    <fullName>Storage_Information__c</fullName>
    <label>Storage Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>