force-app/main/default/objects/Medication__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>units</fullName>
            </value>
            <value>
                <fullName>mgm</fullName>
            </value>
            <value>
                <fullName>mcg</fullName>
            </value>
            <value>
                <fullName>tab</fullName>
            </value>
            <value>
                <fullName>tablet</fullName>
            </value>
            <value>
                <fullName>iu</fullName>
            </value>
            <value>
                <fullName>mcg SC</fullName>
            </value>
            <value>
                <fullName>iu SC</fullName>
            </value>
            <value>
                <fullName>mg</fullName>
            </value>
            <value>
                <fullName>gm</fullName>
            </value>
            <value>
                <fullName>mg/ml</fullName>
            </value>
            <value>
                <fullName>g</fullName>
            </value>
            <value>
                <fullName>Pumps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>