force-app/main/default/objects/Medication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Medication_Type__c</columns>
    <columns>Dosage__c</columns>
    <columns>Units__c</columns>
    <columns>Regime__c</columns>
    <columns>Notes__c</columns>
    <columns>Normal_Start_Day__c</columns>
    <columns>Normal_End_Day__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>