force-app/main/default/objects/Medication__c/listViews/allSelection_Medication.listView-meta.xml
<ListView>
    <fullName>allSelection_Medication</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>